--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -11,11 +11,14 @@ add_subdirectory(distributed_cmp)
 add_subdirectory(simple_mesh_app)
 add_subdirectory(swarmapp)
 add_subdirectory(msmapp)
+
 if (Jali_DIR OR ENABLE_FleCSI)
   add_subdirectory(portageapp)
 endif (Jali_DIR OR ENABLE_FleCSI)
+
 if (Jali_DIR)
   add_subdirectory(timingapp)
+  add_subdirectory(part-by-part)
 endif (Jali_DIR)
 
 if (ENABLE_FleCSI)
