Enable apps timing through CMake option

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -13,6 +13,8 @@ add_subdirectory(simple_mesh_app)
 add_subdirectory(swarmapp)
 add_subdirectory(msmapp)
 
+option(ENABLE_APP_TIMINGS "Enable timing in apps" ON)
+
 if (Jali_DIR OR ENABLE_FleCSI)
   add_subdirectory(portageapp)
 endif (Jali_DIR OR ENABLE_FleCSI)
@@ -25,3 +27,11 @@ endif (Jali_DIR)
 if (ENABLE_FleCSI)
   add_subdirectory(flecsiapp)
 endif (ENABLE_FleCSI)
+
+if (Jali_DIR AND ENABLE_APP_TIMINGS)
+  target_compile_definitions(portageapp_jali PRIVATE ENABLE_TIMINGS=1)
+  target_compile_definitions(portageapp_t-junction_jali PRIVATE ENABLE_TIMINGS=1)
+  target_compile_definitions(portageapp_rgmd_jali PRIVATE ENABLE_TIMINGS=1)
+  target_compile_definitions(portageapp_multimat_jali PRIVATE ENABLE_TIMINGS=1)
+  target_compile_definitions(timingapp PRIVATE ENABLE_TIMINGS=1)
+endif()
