--- a/portage/driver/CMakeLists.txt
+++ b/portage/driver/CMakeLists.txt
@@ -8,7 +8,8 @@ Please see the license file at the root of this repository, or at:
 
 #-----------------------------------------------------------------------------~#
 
-set(headers  mmdriver.h driver_swarm.h driver_mesh_swarm_mesh.h fix_mismatch.h)
+set(headers  mmdriver.h driver_swarm.h driver_mesh_swarm_mesh.h fix_mismatch.h
+    coredriver.h uberdriver.h parts.h)
 if (TANGRAM_FOUND)
   list(APPEND headers write_to_gmv.h)
 endif (TANGRAM_FOUND)
@@ -30,7 +31,7 @@ if (ENABLE_UNIT_TESTS)
 
    if (Jali_DIR)
        cinch_add_unit(test_driver_multivar
-       SOURCES test/test_driver_multivar 
+       SOURCES test/test_driver_multivar.cc 
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 1)
@@ -41,20 +42,26 @@ if (ENABLE_UNIT_TESTS)
        POLICY MPI
        THREADS 1)
 
+       cinch_add_unit(test_mismatch_disjoint
+       SOURCES test/test_mismatch_disjoint
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+       POLICY MPI
+       THREADS 1)
+
        cinch_add_unit(test_driver
-       SOURCES test/test_driver 
+       SOURCES test/test_driver.cc 
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 1)
 
        #cinch_add_unit(test_driver_step
-       #SOURCES test/test_driver_step 
+       #SOURCES test/test_driver_step.cc 
        #LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        #POLICY MPI
        #THREADS 1)
 
        cinch_add_unit(test_driver_swarm_dist
-       SOURCES test/test_driver_swarm_dist
+       SOURCES test/test_driver_swarm_dist.cc
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 4)
@@ -62,17 +69,23 @@ if (ENABLE_UNIT_TESTS)
      if (TANGRAM_FOUND AND XMOF2D_FOUND)
 
        cinch_add_unit(test_multimat_driver
-       SOURCES test/test_multimat_driver
+       SOURCES test/test_multimat_driver.cc
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
        POLICY MPI
        THREADS 1)
 
        cinch_add_unit(test_multimat_driver_2ndOrder
-       SOURCES test/test_multimat_driver_2ndOrder
+       SOURCES test/test_multimat_driver_2ndOrder.cc
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
        POLICY MPI
        THREADS 1)
 
+       cinch_add_unit(test_uberdriver_multimat
+       SOURCES test/test_uberdriver_multimat.cc
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
+       POLICY MPI
+       THREADS 1)
+       
      endif (TANGRAM_FOUND AND XMOF2D_FOUND)
 
      if (TANGRAM_FOUND)
@@ -83,18 +96,48 @@ if (ENABLE_UNIT_TESTS)
        POLICY MPI
        THREADS 4)
 
+       cinch_add_unit(test_multimat_uberdriver_distributed
+       SOURCES test/test_multimat_uberdriver_distributed
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} 
+       POLICY MPI
+       THREADS 4)
+
      endif (TANGRAM_FOUND)
 
+     cinch_add_unit(test_coredriver_singlemat
+       SOURCES test/test_coredriver_singlemat.cc
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+       POLICY MPI
+       THREADS 1)
+
+       cinch_add_unit(test_driver_part
+               SOURCES test/test_driver_part.cc
+               LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+               POLICY MPI
+               THREADS 1)
+
+       cinch_add_unit(test_driver_part_mismatch
+               SOURCES test/test_driver_part_mismatch.cc
+               LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+               POLICY MPI
+               THREADS 1)
+     
    endif (Jali_DIR)
 
    cinch_add_unit(test_driver_swarm
-     SOURCES test/test_driver_swarm
+     SOURCES test/test_driver_swarm.cc
      LIBRARIES portage
      POLICY MPI
      THREADS 1)
 
    cinch_add_unit(test_driver_mesh_swarm_mesh
-     SOURCES test/test_driver_mesh_swarm_mesh
+     SOURCES test/test_driver_mesh_swarm_mesh.cc
+     LIBRARIES portage
+     POLICY MPI
+     THREADS 1)
+
+   cinch_add_unit(test_part_by_particle
+     SOURCES test/test_part_by_particle
      LIBRARIES portage
      POLICY MPI
      THREADS 1)
