--- a/portage/driver/CMakeLists.txt
+++ b/portage/driver/CMakeLists.txt
@@ -121,6 +121,12 @@ if (ENABLE_UNIT_TESTS)
                LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
                POLICY MPI
                THREADS 1)
+
+       cinch_add_unit(test_driver_part_order_two
+               SOURCES test/test_driver_part_order_two.cc
+               LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+               POLICY MPI
+               THREADS 1)
      
    endif (Jali_DIR)
 
