Specify explicit dist and rely on default python.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ sudo: required
 services:
 - docker
 
-python:
-  - "3.6"
+dist: xenial
 
 env:
   global:
@@ -38,7 +37,6 @@ after_success:
   - if [[ ${DOCS} || -n ${TRAVIS_TAG} ]]; then
       cd ${HOME}/docker/portage;
       CON=$(docker run -d ${TRAVIS_REPO_SLUG}:latest) && docker cp ${CON}:/home/portage/portage/build/doc . ;
-      pyenv local 3.6;
       pip install doctr;
       doctr deploy . --built-docs doc/doxygen/html;
     fi
