--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,6 @@ after_success:
   - if [[ ${DOCS} || -n ${TRAVIS_TAG} ]]; then
       cd ${HOME}/docker/portage;
       CON=$(docker run -d ${TRAVIS_REPO_SLUG}:latest) && docker cp ${CON}:/home/portage/portage/build/doc . ;
-      pip install doctr;
+      pip3 install doctr;
       doctr deploy . --built-docs doc/doxygen/html;
     fi
