--- a/portage/driver/CMakeLists.txt
+++ b/portage/driver/CMakeLists.txt
@@ -42,6 +42,12 @@ if (ENABLE_UNIT_TESTS)
        POLICY MPI
        THREADS 1)
 
+       cinch_add_unit(test_coredriver_mismatch_fixup
+       SOURCES test/test_coredriver_mismatch_fixup 
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+       POLICY MPI
+       THREADS 1)
+
        cinch_add_unit(test_mismatch_disjoint
        SOURCES test/test_mismatch_disjoint
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
