--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -24,6 +24,7 @@ if (Jali_DIR)
   add_subdirectory(timingapp)
   add_subdirectory(part-by-part)
   add_subdirectory(sweptfaceapp)
+  add_subdirectory(swept_face)
 endif (Jali_DIR)
 
 if (ENABLE_FleCSI)
