--- a/app/sweptfaceapp/test/CMakeLists.txt
+++ b/app/sweptfaceapp/test/CMakeLists.txt
@@ -44,14 +44,28 @@ endmacro(ADD_DISTRIBUTED_APPTEST)
 if (ENABLE_MPI AND Jali_DIR AND TANGRAM_FOUND)
 
   # 2D, constant fields, ro 1, vary number of processors 
-  ADD_DISTRIBUTED_APPTEST(2 5 42 1)
-  ADD_DISTRIBUTED_APPTEST(4 5 42 1)
+  ADD_DISTRIBUTED_APPTEST(2 2 5 42 1)
+  ADD_DISTRIBUTED_APPTEST(4 2 5 42 1)
   
   # 2D, constant fields, ro 2, vary number of processors 
-  ADD_DISTRIBUTED_APPTEST(2 5 42 2)
-  ADD_DISTRIBUTED_APPTEST(4 5 42 2)
+  ADD_DISTRIBUTED_APPTEST(2 2 5 42 2)
+  ADD_DISTRIBUTED_APPTEST(4 2 5 42 2)
 
-  # 2D, linear fields, larger meshes 
+  # 2D, constant fields, ro 2, vary number of processors 
+  ADD_DISTRIBUTED_APPTEST(2 2 5 x+3*y 1)
+  ADD_DISTRIBUTED_APPTEST(4 2 5 x+3*y 1)
+
+  # 2D, constant fields, ro 2, vary number of processors 
+  ADD_DISTRIBUTED_APPTEST(2 2 5 x+3*y 2)
+  ADD_DISTRIBUTED_APPTEST(4 2 5 x+3*y 2)
+
+  # 2D, constant fields, ro 2, vary number of processors 
+  ADD_DISTRIBUTED_APPTEST(2 2 5 x*x+3*y*y*y 1)
+  ADD_DISTRIBUTED_APPTEST(4 2 5 x*x+3*y*y* 1)
+
+  # 2D, constant fields, ro 2, vary number of processors 
+  ADD_DISTRIBUTED_APPTEST(2 2 5 x*x+3*y*y*y 2)
+  ADD_DISTRIBUTED_APPTEST(4 2 5 x*x+3*y*y* 2)
 
 endif (ENABLE_MPI AND Jali_DIR AND TANGRAM_FOUND)
 
