Enable tests in app directory

--- a/app/swept_face/CMakeLists.txt
+++ b/app/swept_face/CMakeLists.txt
@@ -46,8 +46,8 @@ if (ENABLE_MPI AND Jali_DIR)
     endif()
   endforeach()
 
-  # build tests as well
-  #    if (ENABLE_APP_TESTS)
-  #        add_subdirectory(test)
-  #    endif()
+   # build tests as well
+  if (ENABLE_APP_TESTS)
+    add_subdirectory(test)
+  endif()
 endif()
